add simple functionality

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <span id="price"></span>
-  <h1>Bitcoin Current Price is</h1>
+  <h1>Bitcoin Current Price</h1>
   <button>Click Me To Cry &#x1F62D	 </button>
+
+  <script src="script.js"></script>
 </body>
 </html>
